# core_rpg

./: CMakeLists.txt
include/SFML/Graphics/: View.hpp
include/core/: app.h  entity.h  scene.h  scene_manager.h  sfml_math.h
include/entities/: camera.h
include/imgui/: imgui-SFML.h
include/scenes/: main_menu.h
src/: main.cpp
src/core/: app.cpp  scene.cpp  scene_manager.cpp
src/entities/: camera.cpp
src/imgui/: imgui_demo.cpp
src/scenes/: main_menu.cpp
